src/main/kotlin/com/example/falletterbackend/common/error/exception/CustomException.kt
package com.example.falletterbackend.common.error.exception

import org.springframework.http.HttpStatus

class CustomException(
    val httpStatus: HttpStatus,
    override val message: String
) : RuntimeException(message)
